--- a/start/templates/start_view.html
+++ b/start/templates/start_view.html
@@ -3,4 +3,28 @@
 {% block title %} LOLOLO {% endblock title %}
 
 
-{% block content %} <a href="/registration">I want to check this test!</a> {% endblock content %}
+{% block content %}
+
+
+<header>
+  <h1>Чтобы помочь нам и пройти тест, нажмите на кнопку снизу</h1>
+  <!-- <a href="/registration">I want to check this test!</a> -->
+
+
+
+  <button id="btn" class="wd">жмем</button>
+</header>
+
+<main>
+  <p>And the main section.</p>
+</main>
+
+<footer>
+  <p>And, the footer.</p>
+  <small>🕷 Wish you luck, <a href="http://armantaherian.com">Arman</a>.</small>
+</footer>
+
+
+
+
+{% endblock content %}
