--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -1,26 +1,71 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+
+{% load staticfiles %}
+
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+    <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
+    <meta charset="utf-8">
+    <title> О себе</title>
+  </head>
+  <body>
+<div class="main">
+  <!-- <div class="header">
+  </div> -->
+  <div class="content">
 
 
 
-{% block title %} GGGGGG {% endblock title %}
 
-{% block content %}
-<header>
+  </div>
 
-<div class="reg_form">
-<form method="post" action="create/" >
+  <div class="middle">
+  <!-- <div class="middle animated fadeInUpBig slow"> -->
 
-  {% csrf_token %}
+    <!-- <div class="info_query"> -->
 
-  <table>
-    {{ form }}
-  </table>
+      <div class="about_query">
+        <div class="message">
+         <h1>Перед прохождением теста, расскажите нам немного о себе, пожалуйста</h1>
+        </div>
+      </div>
 
-  <input type="submit" value="Let's fuckin' go " id="btn" class="wd">
+      <div class="questions">
+        <div class="cent">
+          <div class="trash">
 
-</form>
+        <form  action='create/' method="post">
+          {% csrf_token %}
+          {% for field in form %}
+            <div class="field">
+              <label for="{{ field.id_for_label }}" class="label">{{ field.html_name }}</label>
+              {{ field }}
+            </div>
+          {% endfor %}
 
-</div>
+          <button type="submit" name="button" >ЛОЛ</button>
+        </form>
+      </div>
+        </div>
+      </div>
+    <!-- </div> -->
 
-</header>
-{% endblock content %}
+
+
+  </div>
+
+
+
+  </div>
+
+</body>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="script.js">
+
+  </script>
+</html>
