--- a/start/templates/base.html
+++ b/start/templates/base.html
@@ -1,40 +1,81 @@
 <!DOCTYPE html>
-
-{% load staticfiles %}
-
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="animate.min.css">
+    <link rel="stylesheet" href="main.css">
+    <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
     <meta charset="utf-8">
-
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-
-
-    <title>{% block title %} {% endblock title %}</title>
+    <title>{% block title %}  lol  {% endblock title %}</title>
   </head>
   <body>
 
+    {% block content %}
+<div class="main">
+  <!-- <div class="header">
+  </div> -->
+  <div class="content">
+    <div class="left_side_text" >
+
+      <h1 class="animated fadeInLeft delay-0.3s">
+      Здравствуй, дорогой друг!
+      </h1>
+      <h3 class="animated fadeInLeft delay-0.7s ">Спасибо тебе за помощь в написании моей дипломной работы.</h3>
+    </div>
+    <div class="right_side_img animated fadeInRight" >
+
+      <div class="btn from-middle">Начать тест</div>
+
+    </div>
 
 
-      <div class="svg-container">
-        <!-- I crated SVG with: https://codepen.io/anthonydugois/pen/mewdyZ -->
-        <svg viewbox="0 0 800 400" class="svg">
-          <path id="curve" fill="#50c6d8" d="M 800 300 Q 400 350 0 300 L 0 0 L 800 0 L 800 300 Z">
-          </path>
-        </svg>
+  </div>
+
+  <div class="middle animated fadeInUpBig slow">
+
+    <div class="explanation">
+
+      <div class="about_test">
+         <h1>Все, что тебе необходимо - выбрать один из представленных ответов в каждом вопросе теста</h1>
+
       </div>
+    </div>
+
+
+    <div class="checkbox_example">
+
+      <p><input type="checkbox" id="checkbox1" name="a" value="1417"> 1417</p>
+      <p><input type="checkbox" id="checkbox2" name="a" value="1680" > 1680</p>
+      <p><input type="checkbox" id="checkbox3" name="a" value="1883" > 1883</p>
+
+    </div>
+  </div>
+
+  <div class="last_hint animated fadeIn delay-2s">
+    <div class="danger">
+      <p class="animated pulse infinite important">И самое главное </p>
+    </div>
+    <div class="danger_description">
+      Мы оцениваем не кандидатов, а агитационную рекламу, это очень важно!
+    </div>
+
+  </div>
+  <div class="start_button">
+
+    <div class="exact_button">
+      <p>shlk</p>
+    </div>
+  </div>
+</div>
 
 
 
-  {% block content %}
-    
-
- {% endblock content %}
-
-
+{% endblock content %}
   </body>
 
 
 
-  <script src="{% static 'js/script.js' %}"></script>
+  <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="script.js">
 
+  </script>
 </html>
