--- a/registration/templates/registration.html
+++ b/registration/templates/registration.html
@@ -45,7 +45,7 @@
             </div>
           {% endfor %}
 
-          <button type="submit" name="button" >ЛОЛ</button>
+          <button type="submit" name="button" class="botr">Начать тест</button>
         </form>
       </div>
         </div>
