--- a/start/templates/start_view.html
+++ b/start/templates/start_view.html
@@ -21,12 +21,12 @@
   <div class="content">
     <div class="left_side_text" >
 
-      <h1 class="animated fadeInLeft delay-0.3s">
+      <h1 class="animated fadeInLeftBig delay-0.3s">
       Здравствуй, дорогой друг!
       </h1>
-      <h3 class="animated fadeInLeft delay-0.7s ">Спасибо тебе за помощь в написании моей дипломной работы.</h3>
+      <h3 class="animated fadeInLeftBig delay-0.7s ">Спасибо тебе за помощь в написании моей дипломной работы.</h3>
     </div>
-    <div class="right_side_img animated fadeInRight" >
+    <div class="right_side_img animated fadeInRightBig" >
 
       <!-- <div class="btn from-middle">Начать тест</div>   div onclick!!!!  -->
       <div class="btn from-middle"><a href="/identify">Начать тест</a></div>
@@ -36,7 +36,7 @@
 
   </div>
 
-  <div class="middle animated fadeInUpBig slow">
+  <div class="middle animated fadeInUpBig">
 
     <div class="explanation">
 
@@ -47,16 +47,16 @@
     </div>
 
 
-    <div class="checkbox_example">
+    <!-- <div class="checkbox_example">
 
       <p><input type="checkbox" id="checkbox1" name="a" value="1417"> 1417</p>
       <p><input type="checkbox" id="checkbox2" name="a" value="1680" > 1680</p>
       <p><input type="checkbox" id="checkbox3" name="a" value="1883" > 1883</p>
 
-    </div>
+    </div> -->
   </div>
 
-  <div class="last_hint animated fadeIn delay-2s">
+  <div class="last_hint animated fadeIn ">
     <div class="danger">
       <p class="animated pulse infinite important">И самое главное </p>
     </div>
@@ -65,12 +65,12 @@
     </div>
 
   </div>
-  <div class="start_button">
+  <!-- <div class="start_button"> -->
 
-    <div class="exact_button">
+    <!-- <div class="exact_button">
       <p>shlk</p>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div> -->
 </div>
 
 
