--- a/registration/static/css/registration.css
+++ b/registration/static/css/registration.css
@@ -165,3 +165,45 @@ body{
 .label{
   float:left;
 } */
+
+
+
+
+
+.botr{
+  /* margin-bottom: 10px; */
+  background:#fff;
+  width:225px;
+  display:block;
+  height:33px;
+  /* padding-top:19px; */
+  border:1px solid #000;
+   margin: 10px auto;
+  font-family: 'Dosis', sans;
+  font-size: 18px;
+  font-weight:200;
+  color:#000;
+  text-transform:uppercase;
+  text-decoration:none;
+  text-align:center;
+  opacity:.8;
+  letter-spacing: 1px;
+    -webkit-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+   -moz-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+     -o-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+        transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750); /* linear */
+  cursor: pointer;
+}
+.botr:hover{
+  width:225px;
+  height:33px;
+  /* padding-top:19px; */
+  border:1px solid teal;
+  margin: 10px auto;
+  opacity:1;
+  letter-spacing: 4px;
+  -webkit-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+   -moz-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+     -o-transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
+        transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750); /* linear */
+}
