--- a/start/static/css/main.css
+++ b/start/static/css/main.css
@@ -107,6 +107,8 @@ body{
   height: 40%;
   background-color: #F4F4F4;
 
+  animation-delay: 0.5s;
+
 
 }
 
@@ -151,6 +153,9 @@ body{
   background-position: left;
   width: 100%;
 
+  animation-delay: 1s;
+  animation-duration: 0.8s;
+
 }
 
 .last_hint .danger{
@@ -170,7 +175,7 @@ body{
 }
 
 .important{
-   animation-duration: 3s;
+   animation-duration: 2s;
    animation-delay: 2s;
 
 }
